--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animated_text_kit: ^4.2.2
+  animated_radial_menu: ^0.0.1
+  mouse_parallax: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
