--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   animated_radial_menu: ^0.0.1
   mouse_parallax: ^1.1.0
-
+  flutter_web_plugins:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
