--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "manikanta_gopi_portfolio",
-    "short_name": "manikanta_gopi_portfolio",
+    "name": "Manikanta Gopi",
+    "short_name": "gopi",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
