--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: manikanta_gopi_portfolio
-description: A new Flutter project.
+name: Manikanta_Gopi
+description: portfolio.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -35,6 +35,8 @@ dependencies:
   mouse_parallax: ^1.1.0
   flutter_web_plugins:
     sdk: flutter
+  animated_splash_screen: ^1.3.0
+  page_transition: ^2.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
