--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   animated_text_kit: ^4.2.2
-  animated_radial_menu: ^0.0.1
-  mouse_parallax: ^1.1.0
   flutter_web_plugins:
     sdk: flutter
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
+  url_launcher: ^6.1.11
+  cached_network_image: ^3.2.3
+  carousel_slider: ^4.2.1
+  share_plus: ^7.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
