--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
   share_plus: ^7.0.2
+  meta_seo: ^3.0.5
+  foundation_flutter: ^0.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
